--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "otta-mind",
   "private": true,
+  "homepage": "https://hang-pc.github.io/otta-mind",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -9,7 +10,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --ignore-path ./.prettierignore --write .",
-    "prepack": "husky"
+    "prepare": "husky",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "husky": {
     "hooks": {
@@ -25,6 +28,7 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "framer-motion": "^11.12.0",
+    "gh-pages": "^6.2.0",
     "lint-staged": "^15.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
